Switch to openjdk alpine image Standarized application path inside container